Added scenario7 and Scenario8

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,10 @@
-<!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
-  
-</div>
-
+<app-scenario1></app-scenario1>
+<app-scenario2></app-scenario2>
+<app-scenario3></app-scenario3>
+<app-scenario4></app-scenario4>
+<app-scenario5></app-scenario5>
 <app-component1></app-component1>
+<app-parent1></app-parent1>
+
 
 <router-outlet></router-outlet>
