--- a/src/app/scenario3/scenario3.component.html
+++ b/src/app/scenario3/scenario3.component.html
@@ -1,6 +1,6 @@
 
 <label>
-	Open the console to see Text
+	Enter the text
 </label>
 <input type="text" #myinput ><br><br>
 <button (click)=log(myinput.value)>Click me</button>
