--- a/src/app/scenario4/child1/child1.component.html
+++ b/src/app/scenario4/child1/child1.component.html
@@ -1,5 +1,5 @@
 <label>
-	Open the console to see Text
+Enter Text
 </label>
 <input type="text" #myinput ><br><br>
 <button (click)="fireEvent(myinput.value)">Click me</button><br>
